--- a/index.html
+++ b/index.html
@@ -67,5 +67,22 @@
 </div>
 
     </header>
+
+    <!-- Banner part -->
+     <section class="flex flex-col md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
+
+        <div class="content flex-1">
+            <h2 class="text-4xl font-bold mb-8"> <span>English</span> is Easy!!</h2>
+            <p class="font-bangla my-2">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
+       <input type="text" placeholder="Enter your email" class="input input-md my-2" /> <br>
+       <input type="text" placeholder=".........." class="input input-md my-2" /><br>
+            <button class="btn btn-active btn-primary py-5">Primary</button>
+        </div>
+        <div>
+            <img src="assets/hero-student.png" alt="">
+        </div>
+     </section>
+
+
 </body>
 </html>
