--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      <section class="flex flex-col md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
 
         <div class="content flex-1">
-            <h2 class="text-4xl font-bold mb-8"> <span>English</span> is Easy!!</h2>
+            <h2 class="text-4xl font-bold mb-8"> <span class="text-[#00BCFF]">English</span> is Easy!!</h2>
             <p class="font-bangla my-2">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
        <input type="text" placeholder="Enter your email" class="input input-md my-2" /> <br>
        <input type="text" placeholder=".........." class="input input-md my-2" /><br>
@@ -84,5 +84,17 @@
      </section>
 
 
+     <section>
+
+          <h2 class="text-4xl font-bold mb-8 text-center"> <span class="text-[#00BCFF]">Let's</span> Learn Vocabulary</h2>
+
+        <div id="level-container" class="flex gap-5 flex-wrap justify-center">
+
+        </div>
+     </section>
+     <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
+      
+     </section>
+<script src="scripts/index.js"></script>
 </body>
 </html>
